css fix for dark mode

--- a/src/Resources/public/scss/colour_schemes/dark_mode.scss
+++ b/src/Resources/public/scss/colour_schemes/dark_mode.scss
@@ -21,7 +21,8 @@
 
     .form-input, .form-group input, .ce_form .widget:not(.widget-checkbox):not(.widget-radio) input,
     .form-select:not([multiple]):not([size]), .form-group select:not([size]):not([multiple]), .ce_form .widget:not(.widget-checkbox):not(.widget-radio) select:not([size]):not([multiple]),
-    .form-select, .form-group select, .ce_form .widget:not(.widget-checkbox):not(.widget-radio) select, textarea {
+    .form-select, .form-group select, .ce_form .widget:not(.widget-checkbox):not(.widget-radio) select, textarea,
+    #main .mod_subscribe .form-input, #main .mod_unsubscribe .form-input {
       background: #3c3c3c;
       color: #fff;
     }
